force-app/main/default/objects/LLC_BI__Memo_Data__c/LLC_BI__Memo_Data__c.object-meta.xml
<CustomObject>
    <label>Memo_Data</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Memo Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memo_Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>