force-app/main/default/objects/LLC_BI__Memo_Data__c/fields/LLC_BI__Current__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Current__c</fullName>
    <description>The value of the field at the time the memo was initiated. This field is automatically populated based on the values input on the loan wall for this field at the time the memo was initiated.  This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo</description>
    <label>Current</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>