force-app/main/default/objects/LLC_BI__Memo_Data__c/fields/LLC_BI__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Field_Name__c</fullName>
    <description>The name of the field which values are stored in the current and proposed fields.  This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo. This field specifies which fields on the loan wall are being proposed for changes.</description>
    <label>Field_Name</label>
    <type>TextArea</type>
</CustomField>